--- a/spring-research/src/main/resources/config/application.properties
+++ b/spring-research/src/main/resources/config/application.properties
@@ -12,6 +12,10 @@ datasource.postgres.password=Was1q2w3e$
 datasource.postgres.driver-class-name=org.postgresql.Driver
 mybatis.mapper-locations=classpath:/mapper/*-mapper.xml
 
+# 网络配置
+network.domain=www.overstars.site
+network.port=9003 
+
 #redis配置
 
 # 流水号配置
@@ -19,9 +23,12 @@ TraceNoGenerator.MAX_WORKER_ID=31
 TraceNoGenerator.MAX_DATACENTER_ID=31
 
 # LevelDB 存储路径
-leveldb.path=./image-db
+leveldb.path=./levelDbData/image-db
+leveldb.path.visitLog=./levelDbData/visitLog-db
+
 # 图片存储目录
 image.storage.path=./uploaded-images
+
 # 文件大小限制
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
