--- a/spring-research/src/main/resources/config/application.properties
+++ b/spring-research/src/main/resources/config/application.properties
@@ -14,7 +14,7 @@ mybatis.mapper-locations=classpath:/mapper/*-mapper.xml
 
 # 网络配置
 network.domain=www.overstars.site
-network.port=9003 
+network.port=9003
 
 #redis配置
 
@@ -27,7 +27,7 @@ leveldb.path=./levelDbData/image-db
 leveldb.path.visitLog=./levelDbData/visitLog-db
 
 # 图片存储目录
-image.storage.path=./uploaded-images
+image.storage.path=/home/yankf/data/uploaded-images
 
 # 文件大小限制
 spring.servlet.multipart.max-file-size=10MB
