:wheelchair: 博客图片访问记录，改为存储到Postgre，而不是LevelDB

--- a/spring-research/build.gradle
+++ b/spring-research/build.gradle
@@ -29,6 +29,11 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // PostgreSQL驱动
+    implementation 'org.postgresql:postgresql:42.7.3'
+    // Spring Data JPA
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter'
 }
 
 tasks.named('test') {
