--- a/spring-research/src/main/resources/config/application.properties
+++ b/spring-research/src/main/resources/config/application.properties
@@ -1,34 +1,1 @@
-description=properties加载正常
-server.port=9003
-
-# 百度翻译
-baiduTransAppId=20210417000785945
-baiduEncryptionKey=UVUMbcvaGHQL0PdWiVHs
-
-# 数据库
-datasource.postgres.url=jdbc:postgresql://43.138.55.7:5432/postgres
-datasource.postgres.user=postgres
-datasource.postgres.password=Was1q2w3e$
-datasource.postgres.driver-class-name=org.postgresql.Driver
-mybatis.mapper-locations=classpath:/mapper/*-mapper.xml
-
-# 网络配置
-network.domain=www.overstars.site
-network.port=9003
-
-#redis配置
-
-# 流水号配置
-TraceNoGenerator.MAX_WORKER_ID=31
-TraceNoGenerator.MAX_DATACENTER_ID=31
-
-# LevelDB 存储路径
-leveldb.path=./levelDbData/image-db
-leveldb.path.visitLog=./levelDbData/visitLog-db
-
-# 图片存储目录
-image.storage.path=/home/yankf/data/uploaded-images
-
-# 文件大小限制
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.profiles.active=dev
