:sparkles: 支持博客arts目录下的多层级指定图片访问

--- a/spring-research/src/main/resources/config/application-dev.properties
+++ b/spring-research/src/main/resources/config/application-dev.properties
@@ -32,6 +32,7 @@ leveldb.path.visitLog=./levelDbData/visitLog-db
 
 # 图片存储目录
 image.storage.path=/home/yankf/data/uploaded-images
+image.arts.path=/home/yankf/data/arts
 
 # 文件大小限制
 spring.servlet.multipart.max-file-size=10MB
